2005-01-25  Murray Cumming  <murrayc@murrayc.com>
  
 	* configure.in, Makefile.am: Add --disable-demos configure option, 
 	by plors in bug #160756. This is needed because AIX does not support 
	sigc::bind at all and the demos would be quite unreadable if we 
 	worked around that. This way, at least gtkmm can be installed on AIX.

2005-01-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/input/main.cc: Do not use O_NONBLOCK, because the 
 	example is meant to be blocking. As advised by Chris Vine.
 
2005-01-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/treeview.hg: Use nested sigc::bind<-1>s instead of 
 	sigc::bind(), because the Tru64 compiler needs the extra hint.
 	Added #ifdef GTKMM_HAVE_SIGC_BIND() around some templated convenience 
 	methods, so we can disable these on AIX.
 	* gtk/src/treemodel.[hg|ccg]: Use Gtk::TreeModel::iterator instead of just 
 	iterator, because the Tru64 compiler finds it ambiguous.
 	* demos/example_treeview_editable_cells.cc: Replace use of 
 	TreeView::append_column_editable() with the long-winded workaround,
 	so that the IRIX MipsPro and Tru64 compilers can build this

2005-01-24  Cedric Gustin <cedric.gustin@swing.be>

	* MSVC_Net2003/gdkmm/Makefile.am, MSVC_Net2003/gtkmm/Makefile.am:
	Rewrote rule for local copy of glibmmconfig.h (required for 'make
	distcheck').
	
2.4.9:

2005-01-18  Murray Cumming  <murrayc@murrayc.com>

	* demos/demowindow.cc: #ifdef on __SUNPRO_CC instead of 
	GLIBMM_COMPILER_SUN_FORTE, though we should really find out why 
	GLIBMM_COMPILER_SUN_FORTE is not defined with the SUN compiler.
	* demos/example_stockbrowser.cc: Remove some consts that the 
	SUN compiler does not allow.
	* gtk/src/radiobutton.hg: Remove duplicate Group typedef, which 
        SUN Forte complains about.
        * This should fix the remaining issues in bug #154973.
	Joel Fredrikson helped with these fixes.
        * gdk/src/pixbuf.hg: PixbufFormatTraits::realease_c_type(): 